weather GET -> POST
